// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with multiple expense 1`] = `
<div>
  <h1>
    Veiwing 
    23
     
    expenses
     totaling 
    2353213.13
  </h1>
</div>
`;

exports[`should correctly render ExpensesSummary with one expense 1`] = `
<div>
  <h1>
    Veiwing 
    1
     
    expense
     totaling 
    2.35
  </h1>
</div>
`;
